<resources>
    <string name="app_name">GrePo</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="welcome">"Welcome "</string>
    <string name="query">Query</string>
    <string name="sign_out">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="company_db">Company DB</string>
    <string name="login">Login</string>
    <string name="server_url">Server URL</string>
    <string name="choose_a_branch">Choose a Branch</string>
    <string name="branch_icon">Branch Icon</string>
</resources>
