<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="loginVM" type="com.tiva11.vm.B1LoginVMIntf" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:id="@+id/userNameTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/user_name"
                    app:errorText="@{loginVM.userNameError}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userNameTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_face_black_24dp"
                        android:drawablePadding="8dp"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:selectAllOnFocus="true"
                        android:text="@={loginVM.userName}"
                         />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:id="@+id/passwordTextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:imeOptions="actionNext"
                    app:errorText="@{loginVM.passwordError}"
                    android:hint="@string/password"
                    app:layout_constraintEnd_toEndOf="@+id/userNameTextInputLayout"
                    app:layout_constraintStart_toStartOf="@+id/userNameTextInputLayout"
                    app:layout_constraintTop_toBottomOf="@+id/userNameTextInputLayout"
                    app:passwordToggleContentDescription="Show Password"
                    app:passwordToggleDrawable="@drawable/ic_remove_red_eye_black_24dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                        android:drawablePadding="8dp"
                        android:inputType="textPassword"
                        android:selectAllOnFocus="true"
                        android:text="@={loginVM.password}"
                         />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:id="@+id/companyDBTextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:imeOptions="actionNext"
                    app:layout_constraintEnd_toEndOf="@+id/userNameTextInputLayout"
                    app:layout_constraintStart_toStartOf="@+id/userNameTextInputLayout"
                    app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/companyDBTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_business_black_24dp"
                        android:drawablePadding="8dp"
                        android:hint="@string/company_db"
                        android:inputType="text"
                        android:selectAllOnFocus="true"
                        android:text="@={loginVM.companyDB}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:id="@+id/serverUrlTextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/userNameTextInputLayout"
                    app:layout_constraintStart_toStartOf="@+id/userNameTextInputLayout"
                    app:layout_constraintTop_toBottomOf="@+id/companyDBTextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/serverUrlTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_cloud_queue_black_24dp"
                        android:drawablePadding="8dp"
                        android:hint="@string/server_url"
                        android:imeActionLabel="@string/login"
                        android:imeOptions="actionDone"
                        android:inputType="textUri"
                        android:selectAllOnFocus="true"
                        android:text="@={loginVM.serverUrl}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:onClick="@{()->loginVM.onLoginAsync()}"
                    android:text="@string/login"
                    app:layout_constraintStart_toStartOf="@+id/userNameTextInputLayout"
                    app:layout_constraintTop_toBottomOf="@+id/serverUrlTextInputLayout" />

                <ProgressBar
                    android:id="@+id/progressBar1"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:visibility="@{loginVM.progressBarVisible}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/userNameTextInputLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginButton" />

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"

                    android:visibility="@{loginVM.progressBarVisible}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/progressBar1"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>